# open-tftp

./: .gitignore  CMakeLists.txt  README.md  STRUCT.md
app/: inet.cpp  inet.h  io.cpp  io.h  main.cpp  main.h  messaging.cpp  messaging.h  requisition.cpp  requisition.h
libs/: callback.cpp  callback.h  poller.cpp  poller.h
proto/: msg.pb.cc  msg.pb.h  msg.proto  msg.protoBuffer.pb.cc  msg.protoBuffer.pb.h
server/: docker-compose.yaml
